get(0) instead of getFirst and getAllRoom() fix